--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <!-- 测试版本 -->
         <module>hc-utils</module>
         <module>hc-directory</module>
+        <module>hc-rpc</module>
     </modules>
 
     <properties>
