--- a/hc-rpc/pom.xml
+++ b/hc-rpc/pom.xml
@@ -21,7 +21,17 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <artifactId>reactor-core</artifactId>
+            <groupId>io.projectreactor</groupId>
+            <version>${reactor.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>${netty.version}</version>
+        </dependency>
 
     </dependencies>
 
