--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
         <apache.commons.pool.version>2.12.0</apache.commons.pool.version>
         <junit.version>4.13.2</junit.version>
         <hutool.version>5.8.6</hutool.version>
+        <reactor.version>3.4.12</reactor.version>
+        <netty.version>4.1.89.Final</netty.version>
     </properties>
 
     <dependencies>
